[tool.poetry]
name = "pythonadventure"
version = "0.1.0"
description = ""
authors = ["Henry Shearer <henry-shearer@dpsnc.net>"]

[tool.poetry.dependencies]
python = "^3.7"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
